--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>¡Hello World!</h1>
-<h2>Testing GitHub pages</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Friky Asociacion</title>
+    </head>
+    <body>
+        <h1>¡Bienvenido a Friky Asociacion!</h1>
+        <p>¡La mejor asociación de frikis de la historia!</p>
+    </body>
+</html>
