Pruebas con links

--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
     </head>
     <body>
         <h1>¡Bienvenido a Friky Asociacion!</h1>
-        <p>¡La mejor asociación de frikis de la historia!</p>
-
-        <a href="about.html">Sobre nosotros</a>
+        <p>Somos la principal asociación de frikis de la historia.</p>
+        <a href="index.html">Volver</a>
     </body>
 </html>
