--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
     <body>
         <h1>¡Bienvenido a Friky Asociacion!</h1>
         <p>Somos la principal asociación de frikis de la historia.</p>
-        <a href="index.html">Volver</a>
+        <a href="/">Volver</a>
     </body>
 </html>
