--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
         <p>¡La mejor asociación de frikis de la historia!</p>
 
         <a href="about.html">Sobre nosotros</a>
+
+        <button>
+            <a href="contact.html">Contacto</a>
+        </button>
     </body>
 </html>
