Finally, base project done

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Friky Asociacion</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title> Rubén's portfolio </title>
+        <link rel="icon" href="/assets/favicon-BVgBPEYS.png" type="image/icon" />
     </head>
     <body>
-        <h1>¡Bienvenido a Friky Asociacion!</h1>
-        <p>¡La mejor asociación de frikis de la historia!</p>
-
-        <a href="about.html">Sobre nosotros</a>
-
-        <button>
-            <a href="contact.html">Contacto</a>
-        </button>
+        <!-- "Dynamic content will be displayed here" -->
+        <div class="app">
+        </div>
     </body>
+    <script src="./main.js" type="module"></script>
 </html>
