--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title> Rubén's portfolio </title>
-        <link rel="icon" href="/assets/favicon-BVgBPEYS.png" type="image/icon" />
+        <link rel="icon" href="./resources/images/favicon.png" type="image/icon" />
     </head>
     <body>
         <!-- "Dynamic content will be displayed here" -->
