Fix file paths for favicon and main.js in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title> Rubén's portfolio </title>
-        <link rel="icon" href="./resources/images/favicon.png" type="image/icon" />
+        <link rel="icon" href="resources/images/favicon.png" type="image/x-icon" />
     </head>
     <body>
         <!-- "Dynamic content will be displayed here" -->
         <div class="app">
         </div>
     </body>
-    <script src="./main.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 </html>
