--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- "Dynamic content will be displayed here" -->
         <div class="app">
         </div>
-        <img src="resources/images/favicon.png" alt="favicon" />
+        <!-- <img src="resources/images/favicon.png" alt="favicon" /> -->
     </body>
     <script src="main.js" type="module"></script>
 </html>
